# food

./: build.sh  pyproject.toml  requirements.txt
food/: asgi.py  models.py  serializers.py  services.py  settings.py  urls.py  views.py  wsgi.py
food/templates/: home.html
