[tool.poetry]
name = "food"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.2"
gunicorn = "^21.2.0"
django-rest-swagger = "^2.2.0"
install = "^1.3.5"
django-cors-headers = "^4.3.1"
whitenoise = {extras = ["brotli"], version = "^6.6.0"}
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
